# menu-ordering-app-web

./: .gitignore  CLAUDE.md  DATA_RESET.md  DEPLOYMENT_ALTERNATIVES.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_STATUS.md  QUICK_DEPLOY.md  RAILWAY_DEPLOY.md  README.md  SINGLE_PROJECT_DEPLOY.md  VERCEL_ENV_CONFIG.md  VERCEL_ENV_SETUP.md  VERCEL_SETUP_GUIDE.md  supabase_schema.sql  vercel.json
.specify/memory/: constitution.md
api/: index.py  requirements.txt
backend/: .env.example  .pylintrc  README_VERCEL_DEPLOY.md  api_index.py  main.py  pyproject.toml  requirements.txt  vercel.json
backend/src/: config.py
backend/src/api/: __init__.py  combinations.py  dishes.py  menus.py
backend/src/db/: supabase_client.py
backend/src/models/: combination.py  dish.py  menu.py
frontend/: .env.example  .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: AppHeader.vue
frontend/src/pages/: CombinationsPage.vue  DishDetailPage.vue  DishesPage.vue  HistoryPage.vue  HomePage.vue  NotFoundPage.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts  combinationService.ts  dishService.ts  menuService.ts
frontend/src/stores/: combinationStore.ts  dishStore.ts  menuStore.ts
frontend/src/utils/: dateUtils.ts
specs/001-family-menu-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-family-menu-system/checklists/: requirements.md
specs/001-family-menu-system/contracts/: api-endpoints.yaml  database-schema.yaml
(+26 files in other folders)
